iOS 13 dark mode

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -15,9 +15,13 @@ opt_in_rules:
 - attributes
 - closure_end_indentation
 - closure_spacing
+- collection_alignment
+- contains_over_filter_count
+- contains_over_filter_is_empty
 - contains_over_first_not_nil
 - convenience_type
 - discouraged_object_literal
+- empty_collection_literal
 - empty_xctest_method
 - explicit_init
 - extension_access_modifier
@@ -27,8 +31,12 @@ opt_in_rules:
 - first_where
 - force_unwrapping
 - function_default_parameter_at_end
+- identical_operands
 - implicit_return
 - joined_default_parameter
+- last_where
+- legacy_multiple
+- legacy_random
 - let_var_whitespace
 - literal_expression_end_indentation
 - modifier_order
@@ -45,20 +53,32 @@ opt_in_rules:
 - prefixed_toplevel_constant
 - private_action
 - private_outlet
+- prohibited_interface_builder
 - quick_discouraged_call
 - quick_discouraged_focused_test
 - quick_discouraged_pending_test
+- reduce_into
+- redundant_type_annotation
 - required_enum_case
 - single_test_class
 - sorted_first_last
 - sorted_imports
+- static_operator
 - strict_fileprivate
+- strong_iboutlet
 - switch_case_on_newline
 - trailing_closure
+- toggle_bool
 - unavailable_function
 - unneeded_parentheses_in_closure_argument
+- unowned_variable_capture
 - untyped_error_in_catch
+- unused_import
+- unused_private_declaration
 - vertical_parameter_alignment_on_call
+- vertical_whitespace_between_cases
+- vertical_whitespace_closing_braces
+- xct_specific_matcher
 - yoda_condition
 
 identifier_name:
