--- a/RubyChina/Info.plist
+++ b/RubyChina/Info.plist
@@ -5,7 +5,7 @@
 	<key>BaseURLString</key>
 	<string>https://ruby-china.net</string>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>zh_CN</string>
+	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
 	<string>Ruby China</string>
 	<key>CFBundleExecutable</key>
@@ -19,11 +19,9 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2.0</string>
+	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleVersion</key>
-	<string>13</string>
-	<key>GoogleAnalyticsTrackingId</key>
-	<string>UA-8885744-9</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
 	<key>LSRequiresIPhoneOS</key>
